--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,38 +1,30 @@
-name: Java CI with Gradle
+name: Java CI
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'adopt'
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Start SUT
+
+      - name: Start server and run tests
         run: |
-          # Запускаем сервер
+          # Запускаем сервер в фоне
           java -jar ./artifacts/app-mbank.jar &
-          echo "Server started in background"
+          SERVER_PID=$!
           
-          # Ждем 15 секунд для полного запуска
-          echo "Waiting for server to initialize..."
-          sleep 15
+          # Ждем запуска сервера
+          sleep 10
           
-          # Проверяем процессы
-          echo "Java processes:"
-          ps aux | grep java
-        env:
-          # Для совместимости с разными локалями
-          JAVA_OPTS: "-Duser.language=en -Duser.country=US"
-      - name: Build with Gradle
-        run: ./gradlew test --info
-        env:
-          # Увеличиваем таймауты
-          REST_ASSURED_READ_TIMEOUT: 30000
+          # Запускаем тесты
+          ./gradlew test
+          
+          # Останавливаем сервер
+          kill $SERVER_PID
