Fix: Make gradlew executable in CI

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,14 +5,19 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'adopt'
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
       - name: Start server and run tests
         run: |
@@ -21,7 +26,11 @@ jobs:
           SERVER_PID=$!
           
           # Ждем запуска сервера
+          echo "Waiting for server to start..."
           sleep 10
+          
+          # Проверяем, что сервер запустился
+          curl -f http://localhost:9999/api/v1/demo/accounts || echo "Server check failed, but continuing..."
           
           # Запускаем тесты
           ./gradlew test
